--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,17 +9,13 @@ trigger:
 pool:
   vmImage: ubuntu-latest
 
-strategy:
-  matrix:
-    Python38:
-      python.version: '3.8'
 
 
 steps:
 - task: UsePythonVersion@0
   inputs:
-    versionSpec: '$(python.version)'
-  displayName: 'Use Python $(python.version)'
+    versionSpec: '3.8'
+  displayName: 'Use Python 3.8'
 
 - script: |
     python helloworld.py
